metadata/MindReader/objects/LinkedinQuickConnection__c.object
<CustomObject>
    <description>LinkedIn Connection details</description>
    <fields>
        <fullName>LinkedinId__c</fullName>
        <description>Linkedin Id details</description>
        <label>LinkedinId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkedin_Address__c</fullName>
        <description>Linkedin Address details</description>
        <label>Linkedin_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <description>first name details</description>
        <label>firstName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>headline__c</fullName>
        <description>headline details</description>
        <label>headline</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>industry__c</fullName>
        <description>industry details</description>
        <label>industry</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <description>last name details</description>
        <label>lastName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>LinkedinQuickConnection</label>
    <nameField>
        <label>LinkedinQuickConnection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LinkedinQuickConnections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>